# ratetouille

./: .gitignore  Application.hs  Foundation.hs  LICENSE  Model.hs  README.md  devel.hs  ratetouille.cabal
Handler/: Collection.hs  Entry.hs  Rating.hs  Root.hs
config/: client_session_key.aes  models  routes  settings.yml  sqlite.yml
deploy/: Procfile
messages/: en.msg
templates/: collection.hamlet  collections.hamlet  default-layout-wrapper.hamlet  default-layout.hamlet  entries.hamlet  entry.hamlet  homepage.hamlet  ratings-score.hamlet  ratings-score.julius  ratings-vote.hamlet
